--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1",
-    "validator": "^13.7.0"
+    "mongoose": "^6.6.1"
   }
 }
